10748
This might be related:

{code}
scala> trait PPrint[A]
defined trait PPrint

scala> def foo[A: PPrint](a: A) = a
foo: [A](a: A)(implicit evidence$1: PPrint[A])A

scala> def test[A: PPrint](a: A) = Seq(a).foreach(foo(_))
test: [A](a: A)(implicit evidence$1: PPrint[A])Unit

scala> def test[A: PPrint](a: A) = Seq(a).foreach(foo)
<console>:9: error: could not find implicit value for evidence parameter of type PPrint[A]
       def test[A: PPrint](a: A) = Seq(a).foreach(foo)
                                                  ^
{code}
